--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
                 <h2 id="title-3" class="mobile-title">Portfolio</h2>
             </div>
 
-            <p> Enjoy some music as you peruse... </p>
-            <audio controls> <!-- background audio -->
+            <p data-aos="fade-down"> Enjoy some music as you peruse... </p>
+            <audio data-aos="fade-right" controls> <!-- background audio -->
                 <source src="/multimedia/audio/audio.mp3" type="audio/mpeg">
             </audio>
-            <section id="personal-info">
+            <section data-aos="fade-up" id="personal-info">
                 <picture id="profile-picture"> <!-- personal image -->
                     <source media="(max-width:760px)" srcset="/multimedia/img/profile-image-med.webp">
                     <source media="(max-width:480px)" srcset="/multimedia/img/profile-image.webp">
@@ -193,7 +193,7 @@
         <br>
         <section id="main-experience"> <!-- professional experience section -->
             <h2>Professional Experience</h2>
-            <section id="main-work-experience" title="Work Experience">
+            <section data-aos="fade-right" id="main-work-experience" title="Work Experience">
                 <h3> Work Experience </h3>
                 <div id="home-work">
                     <iframe title="Wire Cut Company work Youtube video" id="work-video" width="560" height="315"
@@ -219,7 +219,7 @@
             </section>
             <section id="main-cs-experience" title="CS Experience">
                 <h3>CS Experience</h3>
-                <table border="1" frame="void" rules="rows"> <!-- Projects Table -->
+                <table data-aos="fade-in" border="1" frame="void" rules="rows"> <!-- Projects Table -->
                     <caption>CS Projects</caption>
                     <colgroup>
                         <col>
@@ -243,15 +243,15 @@
                         <td> <a href="https://github.com/drakeomar/Payroll_ACTUAL"> Github </a></td>
                     </tr>
                 </table>
-                <p> Click <a href="professional_experience.html"><em><strong>here</strong></em></a> for more projects..</p>
+                <p data-aos="fade-in"> Click <a href="professional_experience.html"><em><strong>here</strong></em></a> for more projects..</p>
                 <hr>
             </section>
         </section>
         <br>
-        <section class="reveal"> <!-- Art Section -->
+        <section data-aos="fade-in" class="reveal"> <!-- Art Section -->
             <h2>Art Endeavors</h2>
             <section id="main-art">
-                <section id="art-1">
+                <section data-aos="fade-left" id="art-1">
                     <figure>
                         <figcaption> Waves and Stripes </figcaption>
                         <picture>
@@ -265,10 +265,10 @@
                         <p> Made in 2017, this piece illustrates the fine line between nature and our perspective. </p>
                     </details>
                 </section>
-                <section id="art-2">
+                <section data-aos="fade-right" id="art-2">
                     <details id="art-details-2">
                         <summary> Blackfish Prism Break- Description </summary>
-                        <p> Made in 2020, this orca presents the duality of prey <i>and</i> predator. </p>
+                        <p> Made in 2020, this orca presents the duality of prey <i>and</i> predator. This strong yet fragile piece of nature exists in motion.</p>
                     </details>
                     <figure>
                         <figcaption> Blackfish Prism Break </figcaption>
@@ -280,7 +280,7 @@
                     </figure>
                     <details id="art-details-2-mobile">
                         <summary> Blackfish Prism Break- Description </summary>
-                        <p> Made in 2020, this orca presents the duality of prey <i>and</i> predator. </p>
+                        <p> Made in 2020, this orca presents the duality of prey <i>and</i> predator. This strong yet fragile piece of nature exists in motion.</p>
                     </details>
                 </section>
 
