--- a/404.html
+++ b/404.html
@@ -23,9 +23,45 @@
 </head>
 <body>
 <!-- test -->
+<header>
+    <div class="nav-wrapper">
+        <nav class="nav-items">
+            <a href="/"><img src="/multimedia/img/icon.png" alt="icon" width="30vw"></a>
+            <div id="mobile-items">
+                <label><a href="/index.html"><img id="home-logo" src="/multimedia/img/icon.png" alt="icon" width="30vw"></a></label>
+                <input id="check01" type="checkbox" name="menu" />
+                <label for="check01"><div class="line"></div><div class="line"></div><div class="line"></div></label>
+                <ul class="menu-dropdown">
+                    <hr>
+                    <li><a href="/index.html">Home</a></li>
+                    <hr>
+                    <li><a href="/professional_experience.html">Work Experience</a></li>
+                    <hr>
+                    <li><a href="/art_projects.html">Art</a></li>
+                    <hr>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <hr>
+                </ul>
+            </div>
+            <div id="non-icon-items">
+                <a class="non-icon" href="/"><p> Home </p></a>
+                <a class="non-icon" href="/professional_experience.html/"> <p> Work Experience </p></a>
+                <a class="non-icon" href="/art_projects.html/"> <p> Art Endeavors </p></a>
+                <a class="non-icon" href="/contact.html/"> <p> Contact </p> </a>
+            </div>
+        </nav>
+    </div>
+</header>
+<main>
     <section>
         <h1> Page Not Found :/</h1>
         <img src="/multimedia/img/icon.png" alt="icon" width="40%">
         <h2>Maybe check the url or try the page request again!</h2>
     </section>
+</main>
+
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 </body>
